--- a/src/main/resources/static/css/skin/fresh-lime.css
+++ b/src/main/resources/static/css/skin/fresh-lime.css
@@ -250,7 +250,7 @@ a, a:hover, a:focus {
 @media only screen and (max-width : 767px) {
 
 .navbar-collapse {
-		background-color: #9fc906;
+		background-color: #72a602;
 		border-color: #fff !important;
 	}
 .navbar-default.navbar-shrink .navbar-nav > li.active > a {
